force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/BMCServiceDesk__TaskHistory__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpTaskHistory</customHelpPage>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on tasks.</description>
    <label>Task History</label>
    <nameField>
        <label>Task History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>