force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__Action_Duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Action_Duration__c</fullName>
    <formula>(VALUE(LEFT(BMCServiceDesk__duration__c , 2))*60)+( VALUE(RIGHT(BMCServiceDesk__duration__c, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>