force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__action_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__action_Id__c</fullName>
    <formula>BMCServiceDesk__FKAction__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to tasks. User-defined actions are used to record details of the each step taken to complete the task.</inlineHelpText>
    <label>Action~</label>
    <type>Text</type>
</CustomField>