force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__duration__c</fullName>
    <inlineHelpText>Use this field to enter the time that you spend performing this action.</inlineHelpText>
    <label>Duration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>