force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__emailToFrom__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__emailToFrom__c</fullName>
    <label>Email (To/From)</label>
    <type>Email</type>
</CustomField>