force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__FKWO__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKWO__c</fullName>
    <label>Task #</label>
    <referenceTo>BMCServiceDesk__Task__c</referenceTo>
    <relationshipLabel>Action History</relationshipLabel>
    <relationshipName>Task_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>