force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__Reply_task_console__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Reply_task_console__c</fullName>
    <description>This field should be added to Console layout for replying to emails from task console.</description>
    <formula>IF( BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILOUT&apos; || BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILIN&apos;, 
		HYPERLINK(&quot;apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=TaskHistoryConsoleReply&amp;recordId=&quot;+BMCServiceDesk__FKWO__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name, 
		IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/b_reply_to_client_email.png&quot;, &quot;Reply&quot;),&apos;_self&apos;), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reply</label>
    <type>Text</type>
</CustomField>