force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__taskId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__taskId__c</fullName>
    <formula>BMCServiceDesk__FKWO__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task #~</label>
    <type>Text</type>
</CustomField>