force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/fields/BMCServiceDesk__user_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__user_Id__c</fullName>
    <formula>BMCServiceDesk__FKUser__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff.</inlineHelpText>
    <label>Staff ID~</label>
    <type>Text</type>
</CustomField>