force-app/main/default/objects/BMCServiceDesk__TaskHistory__c/validationRules/BMCServiceDesk__staffIDRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__staffIDRequired</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKUser__c) , ISBLANK(BMCServiceDesk__FKUser__c))</errorConditionFormula>
    <errorMessage>Please enter Staff ID</errorMessage>
</ValidationRule>